Use Java 17 API in HashMap order gate